# tetris_mirea

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  main.cpp  piece.h  tetris.cpp  tetris.h
